Added SettingForm to listen to a NotifyIcon in the TaskBar

--- a/src/KeyboardShortcutManager/KeyboardShortcutManager.csproj
+++ b/src/KeyboardShortcutManager/KeyboardShortcutManager.csproj
@@ -8,4 +8,15 @@
         <RootNamespace>AcamTi.KeyboardShortcutManager</RootNamespace>
     </PropertyGroup>
 
+    <ItemGroup>
+      <None Remove="icon.ico" />
+      <EmbeddedResource Include="icon.ico" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Compile Update="SettingsForm.cs">
+        <SubType>Form</SubType>
+      </Compile>
+    </ItemGroup>
+
 </Project>
