--- a/src/KeyboardShortcutManager/KeyboardShortcutManager.csproj
+++ b/src/KeyboardShortcutManager/KeyboardShortcutManager.csproj
@@ -20,6 +20,9 @@
       <Compile Update="Forms\SettingsForm.cs">
         <SubType>Form</SubType>
       </Compile>
+      <Compile Update="Forms\ActionDefinitionForm.cs">
+        <SubType>Form</SubType>
+      </Compile>
     </ItemGroup>
 
 </Project>
