--- a/src/KeyboardShortcutManager/KeyboardShortcutManager.csproj
+++ b/src/KeyboardShortcutManager/KeyboardShortcutManager.csproj
@@ -25,4 +25,9 @@
       </Compile>
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.PowerShell.SDK" Version="7.0.3" />
+      <PackageReference Include="System.Management.Automation" Version="7.0.3" />
+    </ItemGroup>
+
 </Project>
