--- a/src/CtrlBang/CtrlBang.csproj
+++ b/src/CtrlBang/CtrlBang.csproj
@@ -4,8 +4,8 @@
         <OutputType>WinExe</OutputType>
         <TargetFramework>netcoreapp3.1</TargetFramework>
         <UseWindowsForms>true</UseWindowsForms>
-        <AssemblyName>AcamTi.KeyboardShortcutManager</AssemblyName>
-        <RootNamespace>AcamTi.KeyboardShortcutManager</RootNamespace>
+        <AssemblyName>AcamTi.CtrlBang</AssemblyName>
+        <RootNamespace>AcamTi.CtrlBang</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
