Project assembly setup

--- a/src/CtrlBang/CtrlBang.csproj
+++ b/src/CtrlBang/CtrlBang.csproj
@@ -4,8 +4,10 @@
         <OutputType>WinExe</OutputType>
         <TargetFramework>netcoreapp3.1</TargetFramework>
         <UseWindowsForms>true</UseWindowsForms>
-        <AssemblyName>AcamTi.CtrlBang</AssemblyName>
+        <AssemblyName>CtrlBang</AssemblyName>
         <RootNamespace>AcamTi.CtrlBang</RootNamespace>
+        <Company>ACAM Services et Conseils TI Inc.</Company>
+        <Product>Ctrl + Bang!</Product>
     </PropertyGroup>
 
     <ItemGroup>
