Icon project + fix out of focus issue + fix thread performance

--- a/src/CtrlBang/CtrlBang.csproj
+++ b/src/CtrlBang/CtrlBang.csproj
@@ -8,6 +8,7 @@
         <RootNamespace>AcamTi.CtrlBang</RootNamespace>
         <Company>ACAM Services et Conseils TI Inc.</Company>
         <Product>Ctrl + Bang!</Product>
+        <ApplicationIcon>icon.ico</ApplicationIcon>
     </PropertyGroup>
 
     <ItemGroup>
